# roc-pbt

./: .gitignore  README.md  flake.nix  justfile  rust-toolchain.toml
examples/: .gitignore  simple.roc
platform/: Cargo.toml  Effect.roc  Generator.roc  Stdout.roc  main.roc
platform/crates/glue/roc_app/src/: x86_64.rs
platform/crates/glue/roc_std/src/: lib.rs
platform/crates/host/: Cargo.toml
platform/crates/host/src/: generators.rs  lib.rs  required_externs.rs
platform/glue/roc_app/src/: aarch64.rs
platform/src/: lib.rs
